--- a/config/scaffolding/Super_iPaaSProject.yml
+++ b/config/scaffolding/Super_iPaaSProject.yml
@@ -8,13 +8,13 @@ packages:
   gitUsername: RyotaNarita
   gitBranch: main
 services:
-- serviceName: project.gp02_super_ipaas.integrations:generateQuotation
+- serviceName: project.super_ipaas.integrations:generateQuotation
   packages:
-  - name: GP02_Super_iPaaSProject
+  - name: Super_iPaaSProject
     version: "1.0"
-- serviceName: project.gp02_super_ipaas.integrations:getCustomerById
+- serviceName: project.super_ipaas.integrations:getCustomerById
   packages:
-  - name: GP02_Super_iPaaSProject
+  - name: Super_iPaaSProject
     version: "1.0"
 - serviceName: pub.client:http
   packages:
@@ -28,9 +28,9 @@ services:
   packages:
   - name: WmPublic
     version: 11.0.0.0.741
-- serviceName: project.gp02_super_ipaas.integrations:getProductById
+- serviceName: project.super_ipaas.integrations:getProductById
   packages:
-  - name: GP02_Super_iPaaSProject
+  - name: Super_iPaaSProject
     version: "1.0"
 - serviceName: pub.string:isNumber
   packages:
